# OpenCVFaceDetect

./: README.md  gradlew  gradlew.bat  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wangxingxing/opencv_face_detect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wangxingxing/opencv_face_detect/: CameraHelper.java  FileUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangxingxing/opencv_face_detect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
